# sd2-depth-api

./: .gitignore  README.md  api_call_example.py  app.py  environment.yml  main.py  pyproject.toml
sd2_depth_api/: app.py  deph_model.py  depth_map.py  image.py  logger.py  midas.py  s3.py
sd2_depth_api/routes/: depth_processor.py  generate_depth_map.py  infer_images.py
